# CI628-ClientServer

./: .gitignore  .main.cpp.swp  CMakeLists.txt  Client.cpp  Client.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  README.md  Server.cpp  Server.h  ServerGame.cpp  ServerGame.h  copy_assets.cmake  main.cpp  main.original.cpp
src/: Client.cpp  Client.h  Game.cpp  Game.h  Server.cpp  Server.h  Window.cpp  Window.h  main.cpp
